# approve_assistant

./: .gitignore  CLAUDE.md  README.md  plan.md  summary.md  task.md  trust_lens_ai_合同审核助手完整技术架构文档 (1).md
backend/: .env.example  __init__.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  document_routes.py  explain_routes.py  review_routes.py  rule_routes.py
backend/config/: __init__.py  database.py  document_models.py  document_service.py  models.py  rule_parser.py  rule_service.py
backend/document/: __init__.py  chunker.py  docx_parser.py  embedding.py  pdf_parser.py
backend/execution/: __init__.py  executor.py  query_builder.py  review_prompt.py
backend/utils/: error_handler.py
backend/vector/: __init__.py  vector_store.py
docs/: demo_script.md  deployment.md  faq.md  integration_test_report.md  performance_test_report.md  prompt_evaluation_report.md  workflow_integration_test_report.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
prompts/: explain.txt  review.txt  rule_parsing.txt
tests/: run_all_tests.py  test_chunk_schema.py  test_chunker.py  test_document_api.py  test_document_state_schema.py  test_docx_parser.py  test_embedding.py  test_error_handler.py  test_executor.py  test_explain_api.py  test_explain_prompt.py  test_pdf_parser.py  test_performance.py  test_query_builder.py  test_report.txt  test_review_api.py  test_review_prompt.py  test_review_result_schema.py  test_rule_api.py  test_rule_parser.py  test_rule_schema.py  test_rule_service.py
(+26 files in other folders)
