[project]
name = "trustlens-backend"
version = "0.1.0"
description = "TrustLens AI Contract Review Assistant - Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "faiss-cpu>=1.7.0",
    "openai>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
